# kubiak_joskowiak

./: .gitignore  README.md
project1_turtle/: CMakeLists.txt  package.xml
project1_turtle/launch/: project1_turtle.launch
project1_turtle/src/: turtle_wasd_op.cpp
project2_dhmanip/: CMakeLists.txt  package.xml
project2_dhmanip/launch/: display.launch  manip.launch  runrviz.launch
project2_dhmanip/scripts/: param_converter.py
project2_dhmanip/urdf/: manip.urdf  manip_fixed.urdf
project2_dhmanip/yaml/: dhparams.json  urdf.yaml
project2_robot/: CMakeLists.txt  package.xml
project2_robot/launch/: display.launch
project2_robot/src/: parameter_converter.cpp
project2_robot/urdf/: robot.urdf
project3_dkin/: CMakeLists.txt  package.xml
project3_dkin/launch/: full.launch  runrviz.launch
project3_dkin/rviz/: urdf.rviz
project3_dkin/scripts/: kdl_dkin.py  nonkdl_dkin.py  param_converter.py  test.py
project3_dkin/yaml/: dhparams.json
project4_intpol/: CMakeLists.txt  package.xml
project4_intpol/launch/: full.launch  intpol.launch  simulation.launch
project4_intpol/scripts/: jint.py  oint.py
project4_intpol/srv/: jint_control.srv  oint_control.srv
project4_intpol/urdf/: manip.urdf
project5_inkin/: CMakeLists.txt  package.xml
project5_inkin/launch/: intpol.launch  simulation.launch
project5_inkin/scripts/: ikin.py  ocmd.py
project5_inkin/srv/: ocmd_control.srv
tutorial/: 02-multipleshapes.urdf  model.xacro
